[gd_scene load_steps=5 format=2]

[ext_resource path="res://Dialogue/prstart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Dialogue/ChoiceBox.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 5
font_data = ExtResource( 1 )

[node name="ChoiceBox" type="Polygon2D"]
position = Vector2( -336, -72 )
scale = Vector2( 2.111, 1.5 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 15.1587, 128, 303.174, 128, 303.174, 160, 15.1587, 160 )
script = ExtResource( 2 )

[node name="Option1" type="Button" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 19.0
margin_top = 133.0
margin_right = 155.0
margin_bottom = 155.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Option1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "I used to play percussion in high school."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 163.0
margin_top = 133.0
margin_right = 299.0
margin_bottom = 155.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Option2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "I can play Friday Night Funkinâ€™ with my eyes closed. "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Option1" to="." method="_on_Option1_mouse_entered"]
[connection signal="pressed" from="Option1" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Option2" to="." method="_on_Option2_mouse_entered"]
[connection signal="pressed" from="Option2" to="." method="_on_Button2_pressed"]
